# dash-template-rendering

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yaml  publish.yaml  test.yaml
examples/: iris_clustering_app.py  minimal_app.py
requirements/: docs.txt  tests.txt
src/dash_template_rendering/: __init__.py  template_renderer.py  templating.py
tests/: conftest.py  test_template.py
tests/test_elements/: test_elements.py
