[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dash-template-rendering"
authors = [{ name = "Patrick Schleiter", email = "git.pschleiter@gmail.com" }]
description = "Dash Python extention for rendering Jinja2 templates."
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Dash",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dash",
    "plotly",
    "flask",
    "markupsafe",
    "Jinja2",
    "beautifulsoup4",
]
dynamic = ["version", "readme"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "dash_template_rendering.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py38, py39, py310, flake8, coverage
    skip_missing_interpreters = true

    [gh-actions]
    python =
        3.8: py38
        3.9: py39
        3.10: py310

    [testenv]
    deps =
        -r requirements/tests.txt
    commands =
        pytest

    [testenv:flake8]
    deps =
        -r requirements/style.txt
    commands =
        flake8 src tests --max-line-length=88

    [testenv:covarage]
    deps =
        -r requirements/tests.txt
    commands =
        pytest --cov=dash_template_rendering --cov-branch
"""
